# AvalonPackageManager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  CHANGELOG.md  CLI.py  GUI.py  LICENSE  PACKAGE.MD  README.MD  README.md  TODO.MD  TODO.md  cache.json  cfg.py  changelog.py  codecheck.sh  color.py  database.py  include  install.py  main.py  package.py  path.py  pmUtil.py  pyproject.toml  requirements.txt  t.py  version.py
.avalon/: include  install.py  install.sh  package  uninstall.py
.github/workflows/: python-app.yml
C++/: api.h  comp  installreqs.sh  main.cpp  readme.md
Python/: CLI.py  GUI.py  cfg.py  color.py  log.txt  main.py  package.py  path.py  pmUtil.py
Python/config/: cache.py  config.py  jsonobj.py
Python/dialogs/: main.py
apm/: CLI.py  __main__.py  cfg.py  changelog.py  cli.py  log.py  metadata.py  package.py  path.py  pmUtil.py  pm_util.py  requirements.py  version.py
apm/case/: case.py
apm/config/: cache.py  config.py  jsonobj.py
apm/copier/: __init__.py
case/: case.py
config/: jsonobj.py
docs/: PACKAGE.MD  release.md
tests/: test_getCaseInsensitivePath.py  test_get_case_insensitive_path.py
